<!--
  ~
  ~ 	StreamWIDE (Team on The Run)
  ~
  ~ @createdBy  AndroidTeam on Fri, 10 Jan 2020 18:23:21 +0100
  ~ @copyright  Copyright (c) 2020 StreamWIDE UK Ltd (Team on the Run)
  ~ @email      support@teamontherun.com
  ~
  ~ 	© Copyright 2020 StreamWIDE UK Ltd (Team on the Run). StreamWIDE is the copyright holder
  ~ 	of all code contained in this file. Do not redistribute or
  ~  	re-use without permission.
  ~
  ~ @lastModifiedOn Fri, 10 Jan 2020 17:59:17 +0100
  -->

<resources>
    <string name="app_name">STW Prototype</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_messaging">Messaging</string>
    <string name="action_account">Account</string>
    <string name="action_lone_worker">Lone Worker</string>
    <string name="action_geolocation">Geolocation</string>
    <string name="action_logout">Logout</string>
    <string name="action_emergency">Emergency</string>
    <string name="action_voip_calls">VoIP Calls</string>
    <string name="action_my_business">My Business</string>


    <string name="empty_contact_list">No contact available</string>

    <string name="ok_label_dialog">OK</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="select">Select</string>
    <string name="update_availability">Update availability</string>

    <!-- Settings - Availability  -->
    <string-array name="setting_availability_options">
        <item>On Duty</item>
        <item>Off Duty</item>
    </string-array>

    <string name="bad_device_id_dialog_title">Confirmation</string>
    <string name="bad_device_id_dialog_content">Your account is already used on another device. Do you want to link the account with this device instead?</string>

    <string name="operational_status_off">Off</string>
    <string name="disable_operational_status">Disable</string>

    <!-- Settings - Display name order  -->
    <string-array name="setting_display_name_order_options">
        <item>First Name</item>
        <item>Last Name</item>
    </string-array>
    <string name="dialog_display_name_order_title">Sort contacts by</string>

</resources>
